[Downloads] Path collision check should be case insensitive.

If there are two on-going downloads with suggested paths that only
differ by case, they should be considered in conflict. Thus the download
that started later should end up with a uniquified path. Otherwise the
files may overwrite each other during the final rename.

R=svaldez@chromium.org
BUG=619516

Review-Url: https://codereview.chromium.org/2136673002
Cr-Commit-Position: refs/heads/master@{#404711}

Former-commit-id: 3f4e2aada67ac99063cc7bddf88dddf6ed93e9c0